# iso45001-rag-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
data/auditoria_sbs/: iso_45001_2018.md
tests/: test_api.py  test_contract.py  test_evaluation.py  test_properties.py
